# mlt

./: .gitignore  .gitmodules  CMakeLists.txt
docker/melt-release/: Dockerfile  README.md
src/framework/: mlt_consumer.c  mlt_events.c  mlt_factory.c  mlt_factory_register.h  mlt_multitrack.c  mlt_playlist.c  mlt_producer.c  mlt_repository.c  mlt_repository.h  mlt_service.c  mlt_tractor.c  mlt_transition.c
src/melt/: melt.c
src/modules/avformat/: factory.c  filter_avcolour_space.c  filter_swresample.c  producer_avformat.c
src/modules/core/: factory.c
src/modules/gdk/: factory.c
src/modules/opengl/: filter_movit_crop.cpp
src/modules/xml/: factory.c  gps_parser.h
src/swig/: mlt.i
src/wasm/: CMakeLists.txt  README.md  wasm.c
wasm/: CMakeLists.txt  README.md  build.sh
wasm/build-scripts/: build-ffmpeg.sh  build-libxml2.sh  build-mlt.sh  var.sh
wasm/examples/: hello.html
wasm/examples/js/: utils.js
wasm/framework/: CMakeLists.txt
wasm/melt/: CMakeLists.txt
wasm/modules/: CMakeLists.txt
wasm/modules/avformat/: CMakeLists.txt
wasm/modules/core/: CMakeLists.txt
wasm/modules/gdk/: CMakeLists.txt
wasm/modules/xml/: CMakeLists.txt
